2000-11-02  Marcus Brinkmann  <marcus@gnu.org>

	* tunnel.c (trivfs_S_io_get_owner): Add return type to silence
	compiler warning.

2000-10-06  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (SRCS): Add tunnel.c
	* tunnel.c: New file.
	* linux-src/net/ipv4/devinet.c (configure_device): New argument PEER.
	Implement support for setting the destination address for
	point-to-point interfaces.
	(inquire_device): New argument PEER.
	Implement support to get the destination address.
	* main.c: Include fcntl.h.
	Update prototype of configure_device.
	Set trivfs_support_read and trivfs_support_write to 1, as we support
	those in some cases now. For the same reason, set trivfs_allow_open
	to O_READ | O_WRITE.
	(pfinet_demuxer): If the port is not in the socketport_class,
	don't try io_server (so requests for trivfs are not catched too early).
	(find_device): Use setup_tunnel_device for tun* interfaces.
	(main): Add peer argument to configure_device call for the lo interface.
	* options.c: Update prototypes for configure_device, inquire_device.
	(options): Add --peer option.
	(stuct parse_interface): Add peer member.
	(parse_hook_add_interface): Initialize peer.
	(parse_opt): Add a case for --peer.
	Add peer argument to configure_device call.
	(add_dev_opts): Add peer variable, add it to inquire_device call arguments.
	Check for peer argument and add it to command line if it is there.
	* pfinet.h: Add prototype for setup_tunnel_device.

2000-10-04  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (SRCS): Add dummy.c
	* dummy.c: New file.

	* ethernet.c: Moved ETHER_PORT, READPT, READPTNAME to ...
	(struct ether_device): ... here. New struct. ETHER_DEV is now a
	pointer to a struct ether_device.
	(ethernet_demuxer): New variables edev, dev. Iterate over linked
	list ETHER_DEV to find correct readptname. Use dev instead
	ETHER_DEV for socket buffer manipulation.
	(ethernet_open): New variable edev.  Use dev->priv to find correct